| Summary: | ASTERISK-24997: Astobj2: Some callers of __adjust_lock do not pre-check the object | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-04-22 15:10:11 | Date Closed: | 2015-04-23 06:51:35 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | SVN 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | {{\__adjust_lock}} does not check that the object passed to it is valid. Most callers do this check before {{\__adjust_lock}} can be called. Those that don't should. | ||
| Comments: | By: Corey Farrell (coreyfarrell) 2015-04-22 16:33:22.795-0500 This change is being proposed in response to a finding by [~rmudgett] on https://gerrit.asterisk.org/140. | ||